--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu|Cinzel|Open+Sans+Condensed:300" rel="stylesheet">
 
   </head>
   <body>
