Nav fade in, fonts

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@
 
   <div class="site-wrapper">
 
+    <div class="nav-bg-fade">
+    </div>
+
     <!-- Fixed navbar -->
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -61,6 +64,9 @@
 
       <!--Personal Statement-->
       <div class="container-fluid statement" id="statement">
+        <div class="quote">
+          <p>&ldquo;</p>
+        </div>
         <div class="statement-container">
           <p>"My name is Luke Green.  I am an artist and geek culture afficionado seeking new roles with highly creative teams. Take a look at the sections below for more about my design and digital illustration skills."</p>
         </div>
@@ -226,7 +232,6 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/smooth-scroll/smooth-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
