Got shuffle up and running

--- a/app/index.html
+++ b/app/index.html
@@ -81,100 +81,104 @@
 
         <hr class="featurette-divider" id="first-divider">
 
-        <section class="portfolio">
-  <div class="container">
-    <div class="row">
+        <h1 class="text-center">Filterable portfolio with Bootstrap 3 and Shuffle.js</h1>
 
-      <ul class="portfolio-sorting list-inline text-center">
-        <li><a href="#" data-group="all" class="active">All</a></li>
-        <li><a href="#" data-group="people">People</a></li>
-        <li><a href="#" data-group="simpsons">Simpsons</a></li>
-        <li><a href="#" data-group="futurama">Futurama</a></li>
-      </ul> <!--end portfolio sorting -->
+    <section class="portfolio">
+      <div class="container">
+        <div class="row">
 
-      <ul class="portfolio-items list-unstyled" id="grid">
+          <ul class="portfolio-sorting list-inline text-center">
+            <li><a href="#" data-group="all" class="active">All</a></li>
+            <li><a href="#" data-group="people">People</a></li>
+            <li><a href="#" data-group="simpsons">Simpsons</a></li>
+            <li><a href="#" data-group="futurama">Futurama</a></li>
+          </ul> <!--end portfolio sorting -->
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
-          <figure class="portfolio-item">
-            <a href="#">
-              <img src="http://lorempixel.com/700/400/people/1" alt="Item 1" class="img-responsive">
-            </a>
-          </figure>
-        </li>
+          <ul class="portfolio-items list-unstyled" id="grid">
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
-            <figure class="portfolio-item">
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
+              <figure class="portfolio-item">
                 <a href="#">
-                    <img src="http://lorempixel.com/700/400/people/7" alt="" class="img-responsive">
+                  <img src="images/Descartes daughter FINAL ALT.jpg" alt="Item 1" class="img-responsive">
                 </a>
-            </figure>
-        </li>
+              </figure>
+            </li>
 
-       <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/futurama/700/400/1" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
+                <figure class="portfolio-item">
+                    <a href="#">
+                        <img src="images/Hanger Bay REVISED 2 FINAL.jpg" alt="" class="img-responsive">
+                    </a>
+                </figure>
+            </li>
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/futurama/700/400/2" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+           <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="images/Lunar Base REVISED FINAL.jpg" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons", "people"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/simpsons/700/400/1" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="http://lorempicsum.com/futurama/700/400/2" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/simpsons/700/400/3" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons", "people"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="http://lorempicsum.com/simpsons/700/400/1" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
-            <figure class="portfolio-item">
-                <a href="#">
-                    <img src="http://lorempixel.com/700/400/people/9" alt="" class="img-responsive">
-                </a>
-            </figure>
-        </li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="http://lorempicsum.com/simpsons/700/400/3" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-         <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/simpsons/700/400/4" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["people"]'>
+                <figure class="portfolio-item">
+                    <a href="#">
+                        <img src="http://lorempixel.com/700/400/people/9" alt="" class="img-responsive">
+                    </a>
+                </figure>
+            </li>
 
-        <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
-          <figure class="portfolio-item">
-              <a href="#">
-                  <img src="http://lorempicsum.com/futurama/700/400/5" alt="" class="img-responsive">
-              </a>
-          </figure>
-        </li>
+             <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["simpsons"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="http://lorempicsum.com/simpsons/700/400/4" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-        <!-- sizer -->
-        <li class="col-md-4 col-sm-4 col-xs-6 shuffle_sizer"></li>
+            <li class="col-md-4 col-sm-4 col-xs-6" data-groups='["futurama"]'>
+              <figure class="portfolio-item">
+                  <a href="#">
+                      <img src="http://lorempicsum.com/futurama/700/400/5" alt="" class="img-responsive">
+                  </a>
+              </figure>
+            </li>
 
-      </ul> <!--end portfolio grid -->
 
-      </div> <!--end row -->
-    </div> <!-- end container-->
-</section>
+            <!-- sizer -->
+            <li class="col-md-4 col-sm-4 col-xs-6 shuffle_sizer"></li>
 
+
+          </ul> <!--end portfolio grid -->
+
+
+          </div> <!--end row -->
+        </div> <!-- end container-->
+    </section>
 
         <hr class="featurette-divider">
 
@@ -226,33 +230,6 @@
        </div>
       </div> <!--/contact section-->
 
-      <!-- Modals -->
-      <div class="modal fade" id="application-modal-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="myModalLabel">Zeroic Games Website</h4>
-            </div>
-            <div class="modal-body">
-              <a href="http://zeroicgames.com" target="_blank"><img src="images/ZG-screen.jpg" alt="Zeroic games website"></a>
-              <h5>Project description</h5>
-              <p>I did design, layout, and content for the Zeroic Games website.  Zeroic Games is a small, independent board and card game design studio located in Seattle, WA.</p>
-              <h5>Technologies used</h5>
-              <ul>
-                <li>WordPress</li>
-                <li>CSS3</li>
-              </ul>
-            </div>
-            <div class="modal-footer">
-              <a href="http://zeroicgames.com" target="_blank" class="btn btn-default">Visit site</a>
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--/Modals-->
-
       <footer>
         <h5>Luke Green, 2017 | site powered by Yeoman, Bower, Grunt, HTML5, CSS3, jQuery, Bootstrap, GitHub Pages</h5>
       </footer>
@@ -262,7 +239,6 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/shufflejs/dist/shuffle.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -286,6 +262,9 @@
     <!-- build:js(.tmp) scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
+
+    <script src="scripts/jquery.shuffle.min.js"></script>
+    <script src="scripts/custom.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
